Fix bug with broken layout as we have vertical scroll.

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,6 @@ body {
   display: flex;
   flex-flow: row;
   width: 100%;
-  height: 100%;
   flex-grow: 1;
 }
 
